--- a/RATING-SERVICE/src/main/resources/application.properties
+++ b/RATING-SERVICE/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8083
+server.port=8084
 
-spring.datasource.url=jdbc:mysql://localhost:3306/shop
+spring.datasource.url=jdbc:mysql://localhost:3306/rating
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Prashant@20
@@ -8,7 +8,7 @@ spring.datasource.password=Prashant@20
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.application.name=SHOP-SERVICE
+spring.application.name=RATING-SERVICE
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
